--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </div>
       </form>
 
-      <button class="btn btn-outline-secondary mt-3" onclick="toggleDarkMode()">🌙 Tume režiim</button>
+      
       <div class="mt-3 text-center">
-        <small class="text-muted">Uuendub automaatselt (Tallinna aeg)</small>
+        <small class="text-muted">Uuendub automaatselt iga hommik kell 07:00.</small>
       </div>
 
     </div>
