--- a/index.html
+++ b/index.html
@@ -2,153 +2,207 @@
 <html lang="et">
 <head>
 <meta charset="UTF-8">
-<title>Edenemise jälgija</title>
+<title>Oktoobri Kutse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
 <style>
-  body.dark { background-color: #121212; color: #eaeaea; }
-  body.dark .card { background-color: #1e1e1e; }
+body.dark { background:#121212; color:#f1f1f1; }
+body.dark .card,
+body.dark .list-group-item,
+body.dark table,
+body.dark input {
+  background:#1e1e1e !important;
+  color:#fff !important;
+  border-color:#444 !important;
+}
 
-  .title-container {
-    display: flex; justify-content: center; align-items: center;
-    font-size: 1.5rem; font-weight: bold; margin-bottom: 1rem;
-    flex-wrap: wrap;
-  }
-  .title-container span { margin: 0 0.5rem; }
+.progress-bar {
+  color:#fff;
+  font-weight:bold;
+  text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
+}
 
-  .progress-bar {
-    color: #fff; font-weight: bold;
-    text-shadow: -1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
-  }
+table th, table td {
+  text-align:center;
+}
 
-  body.dark label.form-label, body.dark input.form-control {
-    color: #fff !important;
-    text-shadow: -1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
-    background-color: #1e1e1e !important; border-color: #444 !important;
-  }
-
-  body:not(.dark) input.form-control { color: #000; background-color: #fff; border-color: #ced4da; text-shadow: none; }
-  body:not(.dark) label.form-label { color: #000; text-shadow: none; }
 </style>
 </head>
+
 <body class="bg-light">
 
-<div class="container mt-5">
-  <div class="card shadow-sm">
-    <div class="card-body text-center">
+<div class="container mt-4">
 
-      <div class="title-container">
-        <span>Oktoobri Kutse</span>
-        <span>→</span>
-        <span id="titleProgress">Päevi Reservini</span>
-        <span>→</span>
-        <span id="titleTime">00:00:00</span>
-      </div>
-
-      <p id="morningGreeting" class="text-success fw-bold mb-3"></p>
-
-      <form class="text-start">
-        <div class="mb-2">
-          <label class="form-label"><strong>Kogu periood:</strong></label>
-          <input type="text" id="totalDays" class="form-control" readonly>
-        </div>
-        <div class="mb-2">
-          <label class="form-label"><strong>Tehtud:</strong></label>
-          <input type="text" id="doneDays" class="form-control" readonly>
-        </div>
-        <div class="mb-2">
-          <label class="form-label"><strong>Jäänud:</strong></label>
-          <input type="text" id="leftDays" class="form-control" readonly>
-        </div>
-
-        <div class="mb-3">
-          <label class="form-label"><strong>Progress:</strong></label>
-          <div class="progress" style="height: 30px;">
-            <div id="progressBar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width:0%">0%</div>
-          </div>
-        </div>
-
-        <div class="mb-2">
-          <label class="form-label"><strong>Järgmine eesmärk:</strong></label>
-          <input type="text" id="nextGoal" class="form-control" readonly>
-        </div>
-      </form>
-
-      
-      <div class="mt-3 text-center">
-        <small class="text-muted">Uuendub automaatselt iga hommik kell 07:00.</small>
-      </div>
-
-    </div>
-  </div>
+<!-- PEALKIRI -->
+<div class="card shadow mb-3">
+<div class="card-body text-center">
+<h4>
+Oktoobri Kutse → <strong>Päevi reservini</strong> →
+<span id="clock">00:00:00</span>
+</h4>
+<p id="morning" class="text-success fw-bold"></p>
+</div>
 </div>
 
+<!-- TABID -->
+<ul class="nav nav-tabs mb-3">
+<li class="nav-item">
+<button class="nav-link active" data-bs-toggle="tab" data-bs-target="#progressTab">📈 Edenemine</button>
+</li>
+<li class="nav-item">
+<button class="nav-link" data-bs-toggle="tab" data-bs-target="#todayTab">🧹 Täna</button>
+</li>
+<li class="nav-item">
+<button class="nav-link" data-bs-toggle="tab" data-bs-target="#excelTab">📊 Excel</button>
+</li>
+</ul>
+
+<div class="tab-content">
+
+<!-- EDENEMINE -->
+<div class="tab-pane fade show active" id="progressTab">
+<div class="card shadow mb-4">
+<div class="card-body">
+
+<label>Kogu periood</label>
+<input id="totalDays" class="form-control mb-2" readonly>
+
+<label>Tehtud</label>
+<input id="doneDays" class="form-control mb-2" readonly>
+
+<label>Jäänud</label>
+<input id="leftDays" class="form-control mb-2" readonly>
+
+<label>Progress</label>
+<div class="progress mb-3" style="height:30px">
+<div id="progressBar" class="progress-bar progress-bar-striped progress-bar-animated">0%</div>
+</div>
+
+<label>Järgmine eesmärk</label>
+<input id="goal" class="form-control" readonly>
+
+</div>
+</div>
+</div>
+
+<!-- TÄNA -->
+<div class="tab-pane fade" id="todayTab">
+<div class="card shadow mb-4">
+<div class="card-body text-center">
+<h5>🧹 Vasaku toa korrapidaja</h5>
+<p id="todayDuty" class="fw-bold fs-5 mt-3"></p>
+</div>
+</div>
+</div>
+
+<!-- EXCEL -->
+<div class="tab-pane fade" id="excelTab">
+<div class="card shadow mb-4">
+<div class="card-body">
+<div class="table-responsive">
+<table class="table table-bordered table-striped">
+<thead>
+<tr>
+<th>Kuupäev</th>
+<th>Korrapidaja</th>
+</tr>
+</thead>
+<tbody id="excelBody"></tbody>
+</table>
+</div>
+</div>
+</div>
+</div>
+
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 <script>
-function toggleDarkMode() {
-  document.body.classList.toggle('dark');
+function toggleDark(){
+  document.body.classList.toggle("dark");
 }
 
-// Täpne päevade arv, ignoreerides kellaaega
-function daysBetween(date1, date2){
-  const d1 = new Date(date1.getFullYear(), date1.getMonth(), date1.getDate());
-  const d2 = new Date(date2.getFullYear(), date2.getMonth(), date2.getDate());
-  const msPerDay = 1000*60*60*24;
-  return Math.max(0, Math.round((d2-d1)/msPerDay));
+// Täpne päevade vahe (ignoreerib kellaaja)
+function daysBetween(a,b){
+  const d1=new Date(a.getFullYear(),a.getMonth(),a.getDate());
+  const d2=new Date(b.getFullYear(),b.getMonth(),b.getDate());
+  return Math.round((d2-d1)/(1000*60*60*24));
 }
 
-function calculateProgress(){
-  const startDate = new Date(2025,9,13);  // 13. oktoober 2025
-  const endDate = new Date(2026,5,12);    // 12. juuni 2026
-  const now = new Date();
-  const today = new Date(now.toLocaleString('en-US',{timeZone:'Europe/Tallinn'}));
+const names=[
+"SUDER","PiSNENKO","TAMMUS","KASPAR PLANS",
+"VISPERT","Nurmetalo","KAAREL PLANS","MARK","KRiSTi"];
 
-  // Tallinna kellaaeg pealkirjas
-  const hour = today.getHours(), min = today.getMinutes(), sec = today.getSeconds();
-  document.getElementById('titleTime').textContent = `${hour.toString().padStart(2,'0')}:${min.toString().padStart(2,'0')}:${sec.toString().padStart(2,'0')}`;
+const progressStart=new Date(2025,9,13);
+const progressEnd=new Date(2026,5,12);
+const dutyStart=new Date(2026,0,6);
+const dutyEnd=new Date(2026,5,12);
 
-  // Hommikune tervitus kell 7
-  const greetingEl = document.getElementById('morningGreeting');
-  const lastGreeting = localStorage.getItem('lastGreetingDate');
-  const todayStr = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
-  if(hour === 7 && lastGreeting !== todayStr){
-    greetingEl.textContent = "🌅 Tere hommikust! Uus päev, uus edasiminek.";
-    localStorage.setItem('lastGreetingDate', todayStr);
-  } else if(hour !== 7){
-    greetingEl.textContent = "";
-  }
+function updateAll(){
+const now=new Date();
+const today=new Date(now.toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
 
-  // Päevade arv
-  const totalDays = daysBetween(startDate,endDate);
-  const doneDays = daysBetween(startDate,today);
-  const leftDays = Math.max(0,totalDays-doneDays);
-  const percentage = Math.min(100, ((doneDays/totalDays)*100).toFixed(1));
+// Kell
+document.getElementById("clock").innerText=today.toLocaleTimeString("et-EE");
 
-  document.getElementById('totalDays').value = totalDays+' päeva';
-  document.getElementById('doneDays').value = doneDays+' päeva';
-  document.getElementById('leftDays').value = leftDays+' päeva';
-  document.getElementById('progressBar').style.width = percentage+'%';
-  document.getElementById('progressBar').textContent = percentage+'%';
+// Hommik 07:00
+document.getElementById("morning").innerText =
+(today.getHours()===7) ? "🌅 Tere hommikust!" : "";
 
-  // Järgmine eesmärk ühes lahtris
-  const goalEl = document.getElementById('nextGoal');
-  const day50 = Math.round(totalDays*0.5);
-  const day75 = Math.round(totalDays*0.75);
-  const day100 = totalDays;
+// Edenemine
+const total=daysBetween(progressStart,progressEnd);
+const done=Math.max(0,daysBetween(progressStart,today));
+const left=total-done;
 
-  if(doneDays < day50){
-    goalEl.value = `🎯 50% saavutamiseni: ${day50 - doneDays} päeva veel`;
-  } else if(doneDays < day75){
-    goalEl.value = `🎯 75% saavutamiseni: ${day75 - doneDays} päeva veel`;
-  } else if(doneDays < day100){
-    goalEl.value = `🎯 100% saavutamiseni: ${day100 - doneDays} päeva veel`;
-  } else {
-    goalEl.value = "🏆 Kõik eesmärgid täidetud!";
-  }
+document.getElementById("totalDays").value=total+" päeva";
+document.getElementById("doneDays").value=done+" päeva";
+document.getElementById("leftDays").value=left+" päeva";
+
+const percent=Math.min(100,(done/total*100).toFixed(1));
+document.getElementById("progressBar").style.width=percent+"%";
+document.getElementById("progressBar").innerText=percent+"%";
+
+const g50=Math.round(total*0.5);
+const g75=Math.round(total*0.75);
+
+let goal="";
+if(done<g50) goal=`🎯 50%: ${g50-done} päeva`;
+else if(done<g75) goal=`🎯 75%: ${g75-done} päeva`;
+else if(done<total) goal=`🎯 100%: ${total-done} päeva`;
+else goal="🏆 Valmis!";
+
+document.getElementById("goal").value=goal;
+
+// Tänane korrapidaja
+const index=daysBetween(dutyStart,today);
+const person=names[((index%names.length)+names.length)%names.length];
+document.getElementById("todayDuty").innerText =
+`${today.toLocaleDateString("et-EE")} – ${person}`;
 }
 
-// Algne arvutus + uuendus iga sekundi tagant
-calculateProgress();
-setInterval(calculateProgress,1000);
+// Excel tabel
+function fillExcel(){
+const tbody=document.getElementById("excelBody");
+tbody.innerHTML="";
+let i=0;
+for(let d=new Date(dutyStart); d<=dutyEnd; d.setDate(d.getDate()+1)){
+const tr=document.createElement("tr");
+tr.innerHTML=`
+<td>${d.toLocaleDateString("et-EE")}</td>
+<td>${names[i%names.length]}</td>`;
+tbody.appendChild(tr);
+i++;
+}
+}
+
+fillExcel();
+updateAll();
+setInterval(updateAll,1000);
 </script>
+
 </body>
 </html>
