--- a/index.html
+++ b/index.html
@@ -8,26 +8,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-body.dark { background:#121212; color:#f1f1f1; }
-body.dark .card,
-body.dark .list-group-item,
-body.dark table,
-body.dark input {
-  background:#1e1e1e !important;
-  color:#fff !important;
-  border-color:#444 !important;
-}
-
 .progress-bar {
   color:#fff;
   font-weight:bold;
   text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
 }
-
-table th, table td {
-  text-align:center;
-}
-
+table th, table td { text-align:center; }
 </style>
 </head>
 
@@ -91,8 +77,10 @@ Oktoobri Kutse → <strong>Päevi reservini</strong> →
 <div class="tab-pane fade" id="todayTab">
 <div class="card shadow mb-4">
 <div class="card-body text-center">
-<h5>🧹 Vasaku toa korrapidaja</h5>
-<p id="todayDuty" class="fw-bold fs-5 mt-3"></p>
+<h5>🧹 Tänased korrapidajad</h5>
+<p id="todayDate" class="fw-bold"></p>
+<p><strong>Vasak tuba:</strong> <span id="leftToday"></span></p>
+<p><strong>Parem tuba:</strong> <span id="rightToday"></span></p>
 </div>
 </div>
 </div>
@@ -101,47 +89,57 @@ Oktoobri Kutse → <strong>Päevi reservini</strong> →
 <div class="tab-pane fade" id="excelTab">
 <div class="card shadow mb-4">
 <div class="card-body">
-<div class="table-responsive">
+
+<h5 class="text-center">🧹 Vasak tuba</h5>
+<div class="table-responsive mb-4">
 <table class="table table-bordered table-striped">
-<thead>
-<tr>
-<th>Kuupäev</th>
-<th>Korrapidaja</th>
-</tr>
-</thead>
-<tbody id="excelBody"></tbody>
+<thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
+<tbody id="excelLeft"></tbody>
 </table>
 </div>
-</div>
-</div>
+
+<h5 class="text-center">🧹 Parem tuba</h5>
+<div class="table-responsive">
+<table class="table table-bordered table-striped">
+<thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
+<tbody id="excelRight"></tbody>
+</table>
 </div>
 
+</div>
+</div>
+</div>
 
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-function toggleDark(){
-  document.body.classList.toggle("dark");
-}
-
-// Täpne päevade vahe (ignoreerib kellaaja)
+// ===== ABI =====
 function daysBetween(a,b){
   const d1=new Date(a.getFullYear(),a.getMonth(),a.getDate());
   const d2=new Date(b.getFullYear(),b.getMonth(),b.getDate());
   return Math.round((d2-d1)/(1000*60*60*24));
 }
 
-const names=[
-"SUDER","PiSNENKO","TAMMUS","KASPAR PLANS",
-"VISPERT","Nurmetalo","KAAREL PLANS","MARK","KRiSTi"];
-
+// ===== ANDMED =====
 const progressStart=new Date(2025,9,13);
 const progressEnd=new Date(2026,5,12);
+
 const dutyStart=new Date(2026,0,6);
 const dutyEnd=new Date(2026,5,12);
 
+const leftNames=[
+"SUDER","PISNENKO","TAMMUS","KASPAR PLANS",
+"VIISPERT","KAKU","KAAREL PLANS","MARK","KRISTI"
+];
+
+const rightNames=[
+"KOSEMAA","KUUSEORG","LUMISTE","MÜÜR",
+"PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"
+];
+
+// ===== UPDATE =====
 function updateAll(){
 const now=new Date();
 const today=new Date(now.toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
@@ -149,7 +147,7 @@ const today=new Date(now.toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
 // Kell
 document.getElementById("clock").innerText=today.toLocaleTimeString("et-EE");
 
-// Hommik 07:00
+// Hommik
 document.getElementById("morning").innerText =
 (today.getHours()===7) ? "🌅 Tere hommikust!" : "";
 
@@ -174,27 +172,23 @@ if(done<g50) goal=`🎯 50%: ${g50-done} päeva`;
 else if(done<g75) goal=`🎯 75%: ${g75-done} päeva`;
 else if(done<total) goal=`🎯 100%: ${total-done} päeva`;
 else goal="🏆 Valmis!";
-
 document.getElementById("goal").value=goal;
 
-// Tänane korrapidaja
+// Tänased korrapidajad
 const index=daysBetween(dutyStart,today);
-const person=names[((index%names.length)+names.length)%names.length];
-document.getElementById("todayDuty").innerText =
-`${today.toLocaleDateString("et-EE")} – ${person}`;
+document.getElementById("todayDate").innerText=today.toLocaleDateString("et-EE");
+document.getElementById("leftToday").innerText=leftNames[index%leftNames.length];
+document.getElementById("rightToday").innerText=rightNames[index%rightNames.length];
 }
 
-// Excel tabel
+// ===== EXCEL =====
 function fillExcel(){
-const tbody=document.getElementById("excelBody");
-tbody.innerHTML="";
 let i=0;
 for(let d=new Date(dutyStart); d<=dutyEnd; d.setDate(d.getDate()+1)){
-const tr=document.createElement("tr");
-tr.innerHTML=`
-<td>${d.toLocaleDateString("et-EE")}</td>
-<td>${names[i%names.length]}</td>`;
-tbody.appendChild(tr);
+document.getElementById("excelLeft").innerHTML+=
+`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${leftNames[i%leftNames.length]}</td></tr>`;
+document.getElementById("excelRight").innerHTML+=
+`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${rightNames[i%rightNames.length]}</td></tr>`;
 i++;
 }
 }
