--- a/index.html
+++ b/index.html
@@ -4,29 +4,45 @@
 <meta charset="UTF-8">
 <title>Oktoobri Kutse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
+body{
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.overlay{
+  background: rgba(255,255,255,0.85);
+  min-height: 100vh;
+}
+
 .progress-bar{
   color:#fff;
   font-weight:bold;
   text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
 }
-table th,table td{text-align:center;}
+
+table th, table td{
+  text-align:center;
+}
 </style>
 </head>
 
-<body class="bg-light">
-<div class="container mt-4">
+<body>
+<div class="overlay">
+
+<div class="container py-4">
 
 <!-- PEALKIRI -->
-<div class="card shadow mb-3">
-<div class="card-body text-center">
+<div class="card shadow mb-3 text-center">
+<div class="card-body">
 <h4>
-Oktoobri Kutse → <strong>Päevi reservini</strong> →
-<span id="clock">00:00:00</span>
+🇪🇪 Oktoobri Kutse → <strong>Päevi reservini</strong>
 </h4>
-<p id="morning" class="text-success fw-bold"></p>
+<p id="clock" class="fw-bold"></p>
 </div>
 </div>
 
@@ -41,19 +57,20 @@ Oktoobri Kutse → <strong>Päevi reservini</strong> →
 
 <!-- EDENEMINE -->
 <div class="tab-pane fade show active" id="progressTab">
+
 <div class="card shadow mb-4">
 <div class="card-body">
 
 <label>Kogu periood</label>
 <input id="totalDays" class="form-control mb-2" readonly>
 
-<label>Tehtud (päevades)</label>
+<label>Tehtud</label>
 <input id="doneDays" class="form-control mb-2" readonly>
 
 <label>Jäänud</label>
 <input id="leftDays" class="form-control mb-2" readonly>
 
-<label>Tehtud aeg (kuud / päevad / tunnid)</label>
+<label>Läbitud aeg</label>
 <input id="elapsedTime" class="form-control mb-2" readonly>
 
 <label>Progress</label>
@@ -66,139 +83,153 @@ Oktoobri Kutse → <strong>Päevi reservini</strong> →
 
 </div>
 </div>
+
+<!-- SÕDURINALI -->
+<div class="card shadow mb-4 text-center">
+<div class="card-body">
+<h5>😂 Tänane sõdurinali</h5>
+<p id="soldierJoke" class="fw-semibold mt-2"></p>
+<small class="text-muted">Uueneb iga hommik kell 06:00</small>
+</div>
+</div>
+
 </div>
 
 <!-- TÄNA -->
 <div class="tab-pane fade" id="todayTab">
-<div class="card shadow mb-4">
-<div class="card-body text-center">
+<div class="card shadow text-center">
+<div class="card-body">
 <h5>🧹 Tänased korrapidajad</h5>
 <p id="todayDate" class="fw-bold"></p>
-<p><strong>Parem tuba:</strong> <span id="leftToday"></span></p>
-<p><strong>Vasak tuba:</strong> <span id="rightToday"></span></p>
+<p><strong>Vasak tuba:</strong> <span id="leftToday"></span></p>
+<p><strong>Parem tuba:</strong> <span id="rightToday"></span></p>
 </div>
 </div>
 </div>
 
 <!-- EXCEL -->
 <div class="tab-pane fade" id="excelTab">
-<div class="card shadow mb-4">
+<div class="card shadow">
 <div class="card-body">
 
-<h5 class="text-center">🧹 Parem tuba</h5>
-<div class="table-responsive mb-4">
-<table class="table table-bordered table-striped">
+<h5 class="text-center">Vasak tuba</h5>
+<table class="table table-bordered table-striped mb-4">
 <thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
 <tbody id="excelLeft"></tbody>
 </table>
-</div>
 
-<h5 class="text-center">🧹 Vasak tuba</h5>
-<div class="table-responsive">
+<h5 class="text-center">Parem tuba</h5>
 <table class="table table-bordered table-striped">
 <thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
 <tbody id="excelRight"></tbody>
 </table>
-</div>
 
 </div>
 </div>
 </div>
 
+</div>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-// ---------- ABI ----------
+// ------------------- PILDID (INTERNETIST) -------------------
+const backgrounds = [
+ "https://images.unsplash.com/photo-1605727216801-e27ce1d0cc28",
+ "https://images.unsplash.com/photo-1598387993211-5c3b8b3bdbf5",
+ "https://images.unsplash.com/photo-1520975916090-3105956dac38",
+ "https://images.unsplash.com/photo-1558980664-10ea7c8a6c91"
+];
+
+// ------------------- NALJAD -------------------
+const soldierJokes = [
+ "Sõdur ei maga – ta ootab suletud silmadega.",
+ "Ajateenistuses õpid, et 'kohe' ei tähenda kunagi.",
+ "Rivis on alati külmem.",
+ "Sõdur sööb alati kiiresti, isegi kodus.",
+ "Kui kästakse puhata, tuleb kohe uus käsk.",
+ "Ajateenistus õpetab, et vihm tuleb alati külgsuunas."
+];
+
+// ------------------- ANDMED -------------------
+const progressStart = new Date(2025,9,13);
+const progressEnd   = new Date(2026,5,12);
+
+const dutyStart = new Date(2026,0,6);
+const dutyEnd   = new Date(2026,5,12);
+
+const leftNames  = ["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"];
+const rightNames = ["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"];
+
+// ------------------- FUNKTSIOONID -------------------
 function daysBetween(a,b){
-  const d1=new Date(a.getFullYear(),a.getMonth(),a.getDate());
-  const d2=new Date(b.getFullYear(),b.getMonth(),b.getDate());
-  return Math.round((d2-d1)/(1000*60*60*24));
+  return Math.floor((b - a) / (1000*60*60*24));
 }
 
-// kuud/päevad/tunnid
-function elapsedYMDH(start, now){
-  let s=new Date(start);
+function elapsedTime(start, now){
   let months=0;
-
-  while(new Date(s.getFullYear(), s.getMonth()+1, s.getDate()) <= now){
-    s.setMonth(s.getMonth()+1);
+  let temp=new Date(start);
+  while(new Date(temp.getFullYear(), temp.getMonth()+1, temp.getDate())<=now){
+    temp.setMonth(temp.getMonth()+1);
     months++;
   }
-
-  const diffMs = now - s;
-  const days = Math.floor(diffMs / (1000*60*60*24));
-  const hours = Math.floor((diffMs % (1000*60*60*24)) / (1000*60*60));
-
-  return {months, days, hours};
+  const diff=now-temp;
+  const days=Math.floor(diff/(1000*60*60*24));
+  const hours=Math.floor((diff%(1000*60*60*24))/(1000*60*60));
+  return `${months} kuud, ${days} päeva, ${hours} tundi`;
 }
 
-// ---------- ANDMED ----------
-const progressStart=new Date(2025,9,13);
-const progressEnd=new Date(2026,5,12);
-
-const dutyStart=new Date(2026,0,6);
-const dutyEnd=new Date(2026,5,12);
-
-const leftNames=["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO", "KAAREL PLANS","MARK","KRiSTi"];
-const rightNames=["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"];
-
-// ---------- UPDATE ----------
+// ------------------- UPDATE -------------------
 function updateAll(){
-const now=new Date();
-const today=new Date(now.toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
+const now = new Date(new Date().toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
 
-// Kell
-document.getElementById("clock").innerText=today.toLocaleTimeString("et-EE");
+document.getElementById("clock").innerText =
+now.toLocaleDateString("et-EE")+" "+now.toLocaleTimeString("et-EE");
 
-// Hommik
-document.getElementById("morning").innerText =
-(today.getHours()===7) ? "🌅 Tere hommikust!" : "";
+const total = daysBetween(progressStart, progressEnd);
+const done  = Math.max(0, daysBetween(progressStart, now));
+const left  = total - done;
 
-// Edenemine
-const total=daysBetween(progressStart,progressEnd);
-const done=Math.max(0,daysBetween(progressStart,today));
-const left=total-done;
+document.getElementById("totalDays").value = total+" päeva";
+document.getElementById("doneDays").value  = done+" päeva";
+document.getElementById("leftDays").value  = left+" päeva";
+document.getElementById("elapsedTime").value = elapsedTime(progressStart, now);
 
-document.getElementById("totalDays").value=total+" päeva";
-document.getElementById("doneDays").value=done+" päeva";
-document.getElementById("leftDays").value=left+" päeva";
-
-// Läbitud aeg
-const e=elapsedYMDH(progressStart,today);
-document.getElementById("elapsedTime").value=
-`${e.months} kuud, ${e.days} päeva, ${e.hours} tundi`;
-
-const percent=Math.min(100,(done/total*100).toFixed(1));
-document.getElementById("progressBar").style.width=percent+"%";
-document.getElementById("progressBar").innerText=percent+"%";
+const percent = Math.min(100,(done/total*100).toFixed(1));
+document.getElementById("progressBar").style.width = percent+"%";
+document.getElementById("progressBar").innerText = percent+"%";
 
 const g50=Math.round(total*0.5);
 const g75=Math.round(total*0.75);
+document.getElementById("goal").value =
+done<g50?`50%: ${g50-done} päeva`:
+done<g75?`75%: ${g75-done} päeva`:
+done<total?`100%: ${total-done} päeva`:"VALMIS";
 
-let goal="";
-if(done<g50) goal=`🎯 50%: ${g50-done} päeva`;
-else if(done<g75) goal=`🎯 75%: ${g75-done} päeva`;
-else if(done<total) goal=`🎯 100%: ${total-done} päeva`;
-else goal="🏆 Valmis!";
-document.getElementById("goal").value=goal;
+const index = daysBetween(dutyStart, now);
+document.getElementById("todayDate").innerText = now.toLocaleDateString("et-EE");
+document.getElementById("leftToday").innerText = leftNames[index%leftNames.length];
+document.getElementById("rightToday").innerText = rightNames[index%rightNames.length];
 
-// Tänased korrapidajad
-const index=daysBetween(dutyStart,today);
-document.getElementById("todayDate").innerText=today.toLocaleDateString("et-EE");
-document.getElementById("leftToday").innerText=leftNames[index%leftNames.length];
-document.getElementById("rightToday").innerText=rightNames[index%rightNames.length];
+// NALI 06:00
+let jokeDay=new Date(now);
+if(now.getHours()<6) jokeDay.setDate(jokeDay.getDate()-1);
+document.getElementById("soldierJoke").innerText =
+soldierJokes[daysBetween(new Date(2025,0,1),jokeDay)%soldierJokes.length];
+
+// TAUST
+document.body.style.backgroundImage =
+`url(${backgrounds[daysBetween(new Date(2025,0,1),now)%backgrounds.length]})`;
 }
 
-// ---------- EXCEL ----------
+// EXCEL
 function fillExcel(){
 let i=0;
 for(let d=new Date(dutyStart); d<=dutyEnd; d.setDate(d.getDate()+1)){
-document.getElementById("excelLeft").innerHTML+=
-`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${leftNames[i%leftNames.length]}</td></tr>`;
-document.getElementById("excelRight").innerHTML+=
-`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${rightNames[i%rightNames.length]}</td></tr>`;
+excelLeft.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${leftNames[i%leftNames.length]}</td></tr>`;
+excelRight.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${rightNames[i%rightNames.length]}</td></tr>`;
 i++;
 }
 }
