--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ table th, table td{
 <div class="card-body">
 <h5>🧹 Tänased korrapidajad</h5>
 <p id="todayDate" class="fw-bold"></p>
-<p><strong>Vasak tuba:</strong> <span id="leftToday"></span></p>
-<p><strong>Parem tuba:</strong> <span id="rightToday"></span></p>
+<p><strong>Parema toa korrapidaja:</strong> <span id="leftToday"></span></p>
+<p><strong>Vasaku toa korrapidaja</strong>a:</strong> <span id="rightToday"></span></p>
 </div>
 </div>
 </div>
@@ -112,13 +112,13 @@ table th, table td{
 <div class="card shadow">
 <div class="card-body">
 
-<h5 class="text-center">Vasak tuba</h5>
+<h5 class="text-center">Parema toa korrapidaja</h5>
 <table class="table table-bordered table-striped mb-4">
 <thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
 <tbody id="excelLeft"></tbody>
 </table>
 
-<h5 class="text-center">Parem tuba</h5>
+<h5 class="text-center">Vasaku toa korrapidaja</h5>
 <table class="table table-bordered table-striped">
 <thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
 <tbody id="excelRight"></tbody>
