--- a/index.html
+++ b/index.html
@@ -33,15 +33,12 @@ table th, table td{
 
 <body>
 <div class="overlay">
-
 <div class="container py-4">
 
 <!-- PEALKIRI -->
 <div class="card shadow mb-3 text-center">
 <div class="card-body">
-<h4>
-🇪🇪 Oktoobri Kutse → <strong>Päevi reservini</strong>
-</h4>
+<h4>🇪🇪 Oktoobri Kutse → <strong>Päevi reservini</strong></h4>
 <p id="clock" class="fw-bold"></p>
 </div>
 </div>
@@ -101,8 +98,8 @@ table th, table td{
 <div class="card-body">
 <h5>🧹 Tänased korrapidajad</h5>
 <p id="todayDate" class="fw-bold"></p>
-<p><strong>Parema toa korrapidaja:</strong> <span id="leftToday"></span></p>
-<p><strong>Vasaku toa korrapidaja</strong>a:</strong> <span id="rightToday"></span></p>
+<p><strong>Parema toa korrapidaja:</strong> <span id="rightToday"></span></p>
+<p><strong>Vasaku toa korrapidaja:</strong> <span id="leftToday"></span></p>
 </div>
 </div>
 </div>
@@ -115,13 +112,13 @@ table th, table td{
 <h5 class="text-center">Parema toa korrapidaja</h5>
 <table class="table table-bordered table-striped mb-4">
 <thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
-<tbody id="excelLeft"></tbody>
+<tbody id="excelRight"></tbody>
 </table>
 
 <h5 class="text-center">Vasaku toa korrapidaja</h5>
 <table class="table table-bordered table-striped">
 <thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead>
-<tbody id="excelRight"></tbody>
+<tbody id="excelLeft"></tbody>
 </table>
 
 </div>
@@ -135,16 +132,16 @@ table th, table td{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-// ------------------- PILDID (INTERNETIST) -------------------
-const backgrounds = [
+// ---------- TAUSTAPILDID ----------
+const backgrounds=[
  "https://images.unsplash.com/photo-1605727216801-e27ce1d0cc28",
  "https://images.unsplash.com/photo-1598387993211-5c3b8b3bdbf5",
  "https://images.unsplash.com/photo-1520975916090-3105956dac38",
  "https://images.unsplash.com/photo-1558980664-10ea7c8a6c91"
 ];
 
-// ------------------- NALJAD -------------------
-const soldierJokes = [
+// ---------- NALJAD ----------
+const soldierJokes=[
  "Sõdur ei maga – ta ootab suletud silmadega.",
  "Ajateenistuses õpid, et 'kohe' ei tähenda kunagi.",
  "Rivis on alati külmem.",
@@ -153,25 +150,25 @@ const soldierJokes = [
  "Ajateenistus õpetab, et vihm tuleb alati külgsuunas."
 ];
 
-// ------------------- ANDMED -------------------
-const progressStart = new Date(2025,9,13);
-const progressEnd   = new Date(2026,5,12);
+// ---------- ANDMED ----------
+const progressStart=new Date(2025,9,13);
+const progressEnd=new Date(2026,5,12);
 
-const dutyStart = new Date(2026,0,6);
-const dutyEnd   = new Date(2026,5,12);
+const dutyStart=new Date(2026,0,6);
+const dutyEnd=new Date(2026,5,12);
 
-const leftNames  = ["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"];
-const rightNames = ["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"];
+const leftNames=["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"];
+const rightNames=["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"];
 
-// ------------------- FUNKTSIOONID -------------------
+// ---------- ABI ----------
 function daysBetween(a,b){
-  return Math.floor((b - a) / (1000*60*60*24));
+  return Math.floor((b-a)/(1000*60*60*24));
 }
 
-function elapsedTime(start, now){
+function elapsedTime(start,now){
   let months=0;
   let temp=new Date(start);
-  while(new Date(temp.getFullYear(), temp.getMonth()+1, temp.getDate())<=now){
+  while(new Date(temp.getFullYear(),temp.getMonth()+1,temp.getDate())<=now){
     temp.setMonth(temp.getMonth()+1);
     months++;
   }
@@ -181,55 +178,54 @@ function elapsedTime(start, now){
   return `${months} kuud, ${days} päeva, ${hours} tundi`;
 }
 
-// ------------------- UPDATE -------------------
+// ---------- UPDATE ----------
 function updateAll(){
-const now = new Date(new Date().toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
+const now=new Date(new Date().toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
 
-document.getElementById("clock").innerText =
+document.getElementById("clock").innerText=
 now.toLocaleDateString("et-EE")+" "+now.toLocaleTimeString("et-EE");
 
-const total = daysBetween(progressStart, progressEnd);
-const done  = Math.max(0, daysBetween(progressStart, now));
-const left  = total - done + 1;
+const total=daysBetween(progressStart,progressEnd);
+const done=Math.max(0,daysBetween(progressStart,now));
+const left=total-done+1;
 
-document.getElementById("totalDays").value = total+" päeva";
-document.getElementById("doneDays").value  = done+" päeva";
-document.getElementById("leftDays").value  = left+" päeva";
-document.getElementById("elapsedTime").value = elapsedTime(progressStart, now);
+totalDays.value=total+" päeva";
+doneDays.value=done+" päeva";
+leftDays.value=left+" päeva";
+elapsedTime.value=elapsedTime(progressStart,now);
 
-const percent = Math.min(100,(done/total*100).toFixed(1));
-document.getElementById("progressBar").style.width = percent+"%";
-document.getElementById("progressBar").innerText = percent+"%";
+const percent=Math.min(100,(done/total*100).toFixed(1));
+progressBar.style.width=percent+"%";
+progressBar.innerText=percent+"%";
 
 const g50=Math.round(total*0.5);
 const g75=Math.round(total*0.75);
-document.getElementById("goal").value =
+goal.value=
 done<g50?`50%: ${g50-done} päeva`:
 done<g75?`75%: ${g75-done} päeva`:
 done<total?`100%: ${total-done} päeva`:"VALMIS";
 
-const index = daysBetween(dutyStart, now);
-document.getElementById("todayDate").innerText = now.toLocaleDateString("et-EE");
-document.getElementById("leftToday").innerText = leftNames[index%leftNames.length];
-document.getElementById("rightToday").innerText = rightNames[index%rightNames.length];
+const idx=daysBetween(dutyStart,now);
+todayDate.innerText=now.toLocaleDateString("et-EE");
+rightToday.innerText=rightNames[idx%rightNames.length];
+leftToday.innerText=leftNames[idx%leftNames.length];
 
 // NALI 06:00
 let jokeDay=new Date(now);
 if(now.getHours()<6) jokeDay.setDate(jokeDay.getDate()-1);
-document.getElementById("soldierJoke").innerText =
-soldierJokes[daysBetween(new Date(2025,0,1),jokeDay)%soldierJokes.length];
+soldierJoke.innerText=soldierJokes[daysBetween(new Date(2025,0,1),jokeDay)%soldierJokes.length];
 
 // TAUST
-document.body.style.backgroundImage =
+document.body.style.backgroundImage=
 `url(${backgrounds[daysBetween(new Date(2025,0,1),now)%backgrounds.length]})`;
 }
 
-// EXCEL
+// ---------- EXCEL ----------
 function fillExcel(){
 let i=0;
-for(let d=new Date(dutyStart); d<=dutyEnd; d.setDate(d.getDate()+1)){
-excelLeft.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${leftNames[i%leftNames.length]}</td></tr>`;
+for(let d=new Date(dutyStart);d<=dutyEnd;d.setDate(d.getDate()+1)){
 excelRight.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${rightNames[i%rightNames.length]}</td></tr>`;
+excelLeft.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${leftNames[i%leftNames.length]}</td></tr>`;
 i++;
 }
 }
